fixed horizontal scroll on chrome

--- a/src/index.css
+++ b/src/index.css
@@ -135,7 +135,7 @@ table {
 
 	background-color: var(--dark);
 	padding-bottom: 5px;
-	width: 100vw;
+	width: 50vw;
 	min-height: 100vh;
 	color: var(--light);
 
